# python

./: .copier-answers.yml  .coverage-tmp.html  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  devdeps.txt  duties.py  gen_ref_nav.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  schema.json  sitemap.xml  t.py
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  dists.yml  release.yml
assets/javascripts/: bundle.b9c76f19.min.js
assets/stylesheets/: main.f62de299.min.css
changelog/: index.html
code_of_conduct/: index.html
config/: coverage.ini  flake8.ini  mypy.ini  pytest.ini  pytest_39.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: class_index.html  covindex.html  d_9cec3bd1cfcac3ff___init___py.html  d_9cec3bd1cfcac3ff_collector_py.html  d_9cec3bd1cfcac3ff_handler_py.html  d_9cec3bd1cfcac3ff_renderer_py.html  d_9cec3bd1cfcac3ff_rendering_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_collector_py.html  d_a44f0ac069e85531_test_handler_py.html  d_a44f0ac069e85531_test_renderer_py.html  d_a44f0ac069e85531_test_rendering_py.html  d_a44f0ac069e85531_test_themes_py.html  function_index.html  index.html  status.json  z_0f80d7964f6a1115___init___py.html  z_0f80d7964f6a1115_config_py.html  z_0f80d7964f6a1115_debug_py.html  z_0f80d7964f6a1115_handler_py.html  z_0f80d7964f6a1115_rendering_py.html  z_9cec3bd1cfcac3ff___init___py.html  z_9cec3bd1cfcac3ff_config_py.html  z_9cec3bd1cfcac3ff_handler_py.html  z_9cec3bd1cfcac3ff_rendering_py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_helpers_py.html  z_a44f0ac069e85531_test_api_py.html  z_a44f0ac069e85531_test_end_to_end_py.html  z_a44f0ac069e85531_test_handler_py.html  z_a44f0ac069e85531_test_rendering_py.html  z_a44f0ac069e85531_test_themes_py.html
credits/: index.html
css/: mkdocstrings.css
customization/: index.html
docs/: .glossary.md  customization.md  gen_ref_nav.py  schema.json  usage.md
docs/.overrides/: main.html
docs/.overrides/partials/: comments.html
docs/css/: material.css  mkdocstrings.css
docs/insiders/: changelog.md  goals.yml  index.md  installation.md
docs/reference/: api.md  cli.md
docs/snippets/package/: __init__.py  generics.py  modern.py
docs/usage/: customization.md  extensions.md  index.md
docs/usage/configuration/: docstrings.md  general.md  headings.md  members.md  signatures.md
docs/usage/docstrings/: google.md  numpy.md  sphinx.md
insiders/: goals.yml  index.html
insiders/changelog/: index.html
insiders/installation/: index.html
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/api/: index.html  index.md
reference/mkdocstrings_handlers/python/: index.html
scripts/: fixsetup.sh  gen_credits.py  gen_ref_nav.py  griffe_extensions.py  make.py  mkdocs_hooks.py
search/: search_index.json
src/mkdocstrings/: __init__.py  __main__.py  cli.py
src/mkdocstrings_handlers/: debug.py
src/mkdocstrings_handlers/python/: __init__.py  collector.py  config.py  crossref.py  handler.py  renderer.py  rendering.py
tests/: __init__.py  conftest.py  helpers.py  snapshots.py  test_api.py  test_cli.py  test_collector.py  test_crossref.py  test_end_to_end.py  test_handler.py  test_renderer.py  test_rendering.py  test_themes.py
tests/snapshots/: __init__.py
tests/snapshots/headings/: heading=,separate_signature=False.html  heading=,separate_signature=True.html  heading=Some heading,separate_signature=False.html  heading=Some heading,separate_signature=True.html
tests/snapshots/members/: filters=('!module_attribute',),inherited_members=('method1',),members=().html  filters=('!module_attribute',),inherited_members=('method1',),members=None.html  filters=('!module_attribute',),inherited_members=('method1',),members=True.html  filters=('!module_attribute',),inherited_members=(),members=('module_attribute',).html  filters=('!module_attribute',),inherited_members=(),members=().html  filters=('!module_attribute',),inherited_members=(),members=None.html  filters=('!module_attribute',),inherited_members=(),members=True.html  filters=('!module_attribute',),inherited_members=False,members=().html  filters=('!module_attribute',),inherited_members=False,members=None.html  filters=('!module_attribute',),inherited_members=False,members=True.html  filters=('!module_attribute',),inherited_members=True,members=False.html  filters=('!module_attribute',),inherited_members=True,members=None.html  filters=('!module_attribute',),inherited_members=True,members=True.html  filters=('module_attribute',),inherited_members=('method1',),members=True.html  filters=('module_attribute',),inherited_members=(),members=('module_attribute',).html  filters=('module_attribute',),inherited_members=(),members=().html  filters=('module_attribute',),inherited_members=(),members=False.html  filters=('module_attribute',),inherited_members=(),members=True.html  filters=('module_attribute',),inherited_members=False,members=('module_attribute',).html  filters=('module_attribute',),inherited_members=False,members=().html  filters=('module_attribute',),inherited_members=False,members=None.html  filters=('module_attribute',),inherited_members=False,members=True.html  filters=('module_attribute',),inherited_members=True,members=None.html  filters=('module_attribute',),inherited_members=True,members=True.html  filters=(),inherited_members=('method1',),members=('module_attribute',).html  filters=(),inherited_members=('method1',),members=False.html  filters=(),inherited_members=('method1',),members=None.html  filters=(),inherited_members=('method1',),members=True.html  filters=(),inherited_members=(),members=False.html  filters=(),inherited_members=(),members=None.html  filters=(),inherited_members=(),members=True.html  filters=(),inherited_members=False,members=False.html  (+39 more)
usage/: index.html
usage/customization/: index.html
usage/extensions/: index.html
(+203 files in other folders)
